--- a/face and emotion/templates/index.html
+++ b/face and emotion/templates/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>AutoMusic</title>
+    <title>Sensus</title>
     <style>
     body {font-family: Trebuchet MS;}
 
@@ -16,20 +16,50 @@
     img {
       border: 8px solid lime;
       margin: auto;
-      display:block;}
+      display: block;}
+    
+    h2 {
+        text-align:center;
+        text-decoration: underline;
+    }
+
+    #recommendations, #music {
+        border: 8px black solid;
+        display: block;
+    }
 
     </style>
   </head>
   <body>
+    <h1 style="text-align: center; font-style: italic;">Welcome to Sensus...</h1>
+
     <div class="row">
-      <div class="column">
-        <img src="{{ url_for('video_feed') }}" alt="Snow" style="width:100%">
+      <div class="column" style="margin-right: 40px; margin-left: 4%; margin-bottom:200px;">
+        <h2>Emotion Analysis</h2>
+        <img src="{{ url_for('video_feed') }}" alt="Emotion Recognition Model" style="width:100%">
       </div>
 
-      <div class="column">
-        <img src="{{ url_for('face_id') }}" alt="Forest" style="width:100%">
+      <div class="column" style="margin-right: 4%; margin-bottom: 200px;">
+        <h2>Face ID Recognition</h2>
+        <img src="{{ url_for('face_id') }}" alt="Face ID" style="width:100%">
       </div>
-    <div>
-    <h1 style="text-align: center;">AutoMusic</h1>    
+    </div>
+
+    <h2>Recommendations based on your detected mood [insert dominant emotion here]:</h2>
+    <div class="row">
+        <div class="column" id="music" style="margin-right: 40px;">
+            <h2>Music:</h2>
+            <iframe style="margin: auto; display: block;" width="420" height="315" src="https://www.youtube.com/embed/_R4-eL3IdhE"></iframe>
+        </div>
+        <div class="column" id="recommendations">
+            <h2>Other suggestions:</h2>
+            <ul>
+                <li>insert recommendations</li>
+                <li>insert recommendations</li>
+                <li>insert recommendations</li>
+            </ul>
+        </div>
+    </div>  
+
   </body>
 </html>
