add default background color

--- a/face and emotion/templates/index.html
+++ b/face and emotion/templates/index.html
@@ -30,7 +30,7 @@
 
     </style>
   </head>
-  <body>
+  <body style="background-color: lightgray;">
     <h1 style="text-align: center; font-style: italic;">Welcome to Sensus...</h1>
 
     <div class="row">
