fixed music playback

--- a/server2/templates/index.html
+++ b/server2/templates/index.html
@@ -75,7 +75,7 @@
 
     var video = ''
 
-    var search_term = $("#search_term").val()
+    var search_term = document.getElementById("search_term").textContent;
     console.log(search_term)
 
     if (search_term != "Music playback was not requested."){
