--- a/demo/templates/index.html
+++ b/demo/templates/index.html
@@ -4,8 +4,8 @@
     <!-- <link rel="shortcut icon" href="S.PNG" /> -->
     <style>
     body {
-        font-family: Trebuchet MS;
-        background-color: {{bg_color}};
+      font-family: Trebuchet MS;
+      background-color: {{bg_color}};
     }
 
     .row {
@@ -23,15 +23,14 @@
       display: block;}
     
     h2 {
-        text-align:center;
-        text-decoration: underline;
+      text-align:center;
+      text-decoration: underline;
     }
 
     #recommendations, #music {
-        border: 8px black solid;
-        display: block;
+      border: 8px black solid;
+      display: block;
     }
-
     </style>
     
   </head>
@@ -71,7 +70,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script>
   $(document).ready(function(){
-    var API_KEY = "AIzaSyDAVVh4XmPAKBIXoOV04xsHUopdheOrQqA"
+    var API_KEY = "insert API key"
 
     var video = ''
 
@@ -98,5 +97,5 @@
     }
 
 </script>
-  </body>
+</body>
 </html>
